--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             margin: 0;
             padding: 0;
         }
+        html,body{
+            width: 100px;
+            height: 100px;
+            /*overflow: hidden;*/
+        }
     </style>
     <title>Web FlappyBird</title>
 </head>
